2005-02-27  Christopher Faylor  <cgf@timesys.com>

	* regtool.cc (main): Avoid a SEGV when nothing follows -K.

2005-02-26  Christopher Faylor  <cgf@timesys.com>

	* kill (getsig): Avoid buffer overflow when generating a signal name.

	* strace.cc (handle_output_debug_string): Make error a little more specific.

2005-02-23  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>

	* cygpath.cc (usage): Clarify help output to indicate acceptance
	of multiple file names as arguments.

2005-01-16  Christopher Faylor  <cgf@timesys.com>

	* ps.cc (main): Eliminate use of PID_ZOMBIE.
	* strace.cc (main): Recognize new option for displaying hex value of
	strace type.
	(handle_output_debug_string): Prepend output with hex value of strace
	message if -H is specified.

2005-01-11  Pierre Humblet <pierre.humblet@ieee.org>

	* mkpasswd.c (print_win_error): Transform into macro.
	(_print_win_error): Upgrade former print_win_error by
	printing the line.
	(current_user): Call _print_win_error.
	(enum_users): Print name in case of lookup failure.
	(enum_local_groups): Ditto.

2004-11-18  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (eprintf): New function.

2004-11-16  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (find_on_path): Clear show_error and/or print_failed
	parameters to display_error.
	(rva_to_offset): Ditto.
	(dll_info): Ditto.
	(track_down): Ditto.

2004-11-13  Pierre Humblet <pierre.humblet@ieee.org>

	* kill.cc (forcekill): Do not pass negative pids to 
	cygwin_internal. Check if sig == 0. Improve error messages.
	(main): Make pid a long long and distinguish between pids, gpids 
	(i.e. negative pids) and Win9x pids.

2004-11-11  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc: Change "keyeprint" to "display_error" throughout.

2004-11-11  Christopher Faylor  <cgf@timesys.com>

	* cygcheck.cc (main): Allow a '-l' without an additional argument.

2004-11-11  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>