@@ -1,5 +1,11 @@
 2005-02-27  Christopher Faylor  <cgf@timesys.com>
 
+	* regtool.cc (opts): The argument to 'K' is not optional.
+	(main): Revert previous change.  Just let getopt deal with missing
+	argument.
+
+2005-02-27  Christopher Faylor  <cgf@timesys.com>
+
 	* regtool.cc (main): Avoid a SEGV when nothing follows -K.
 
 2005-02-26  Christopher Faylor  <cgf@timesys.com>
